--- a/LightMeter/res/layout/main.xml
+++ b/LightMeter/res/layout/main.xml
@@ -9,4 +9,17 @@
     android:layout_height="wrap_content" 
     android:text="@string/hello"
     />
+<TextView 
+	android:text="@+id/TextView01" 
+	android:id="@+id/TextView01" 
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content">
+</TextView>
+<Button 
+	android:text="@string/get_exposure"
+	android:id="@+id/read_button" 
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content">
+</Button>
+
 </LinearLayout>
