--- a/LightMeter/res/layout/main.xml
+++ b/LightMeter/res/layout/main.xml
@@ -10,8 +10,8 @@
     android:text="@string/hello"
     />
 <TextView 
-	android:text="@+id/TextView01" 
-	android:id="@+id/TextView01" 
+	android:text="" 
+	android:id="@+id/sensor_read_text_view" 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content">
 </TextView>
