--- a/LightMeter/res/layout/main.xml
+++ b/LightMeter/res/layout/main.xml
@@ -25,10 +25,12 @@
             android:layout_column="1"
             android:text="ISO"
             android:padding="3dip" />
-        <TextView
-          	android:id="@+id/iso" 
-            android:gravity="right"
-            android:padding="3dip" />
+        <Spinner 
+	        android:id="@+id/isoSpinner"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:drawSelectorOnTop="true"
+	        android:prompt="@string/isoSpiner_prompt" />
     </TableRow>
     <TableRow>
         <TextView
@@ -51,13 +53,6 @@
             android:padding="3dip" />
     </TableRow>
     <TableRow>
-        <TextView 
-        	android:layout_column="2"
-           	android:id="@+id/status_text_view" 
-            android:gravity="right"
-            android:padding="3dip" />
-    </TableRow>
-    <TableRow>
 	    <Button 
 			android:text="@string/pause"
 			android:id="@+id/pause_button" 
@@ -67,4 +62,9 @@
 		
     </TableRow>
 	</TableLayout>
+    <TextView 
+	       	android:id="@+id/status_text_view" 
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:padding="3dip" />
 </LinearLayout>
