--- a/LightMeter/res/values/arrays.xml
+++ b/LightMeter/res/values/arrays.xml
@@ -23,4 +23,15 @@
         <item>19</item>
         <item>22</item>
     </string-array>
+
+<string-array name="isos">
+	<item>50</item>
+	<item>100</item>
+	<item>160</item>
+	<item>200</item>
+	<item>400</item>
+	<item>800</item>
+	<item>1600</item>
+	<item>3200</item>
+</string-array>
 </resources>
