--- a/LightMeter/res/layout/main.xml
+++ b/LightMeter/res/layout/main.xml
@@ -3,7 +3,6 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
-
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -42,6 +41,16 @@
             android:gravity="right"
             android:padding="3dip" />
     </TableRow>
+     <TableRow>
+        <TextView
+            android:layout_column="1"
+            android:text="Exposure Value"
+            android:padding="3dip" />
+        <TextView
+          	android:id="@+id/exposureValue"
+            android:gravity="right"
+            android:padding="3dip" />
+    </TableRow>
     <TableRow>
         <TextView
             android:layout_column="1"
@@ -67,4 +76,5 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:padding="3dip" />
+
 </LinearLayout>
