--- a/LightMeter/res/layout/main.xml
+++ b/LightMeter/res/layout/main.xml
@@ -17,7 +17,7 @@
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:drawSelectorOnTop="true"
-          android:prompt="@string/apertureSpiner_prompt"/>
+          android:prompt="@string/aperture_spinner_prompt"/>
     </TableRow>
     <TableRow>
       <TextView
@@ -29,7 +29,23 @@
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:drawSelectorOnTop="true"
-          android:prompt="@string/isoSpiner_prompt"/>
+          android:prompt="@string/iso_spinner_prompt"/>
+    </TableRow>
+    <TableRow>
+      <TextView
+          android:layout_column="1"
+          android:text="Exposure Setting"
+          android:padding="3dip"/>
+    </TableRow>
+    <TableRow>
+      <Spinner
+          android:id="@+id/exposureSpinner"
+          android:layout_column="1"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:drawSelectorOnTop="true"
+          android:prompt="@string/exposure_spinner_prompt"
+          android:layout_span="2"/>
     </TableRow>
     <TableRow>
       <TextView
@@ -53,12 +69,11 @@
     </TableRow>
     <TableRow>
       <Button
+          android:id="@+id/pause_button" 
           android:text="@string/pause"
-          android:id="@+id/pause_button"
-          android:layout_column="2">
-        android:gravity="right"
+          android:layout_column="2"
+          android:gravity="right">
       </Button>
-
     </TableRow>
   </TableLayout>
   <TextView
@@ -66,5 +81,4 @@
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:padding="3dip"/>
-
 </LinearLayout>
