--- a/LightMeter/res/layout/main.xml
+++ b/LightMeter/res/layout/main.xml
@@ -10,7 +10,7 @@
     <TableRow>
       <TextView
           android:layout_column="1"
-          android:text="Aperture"
+          android:text="Aperture:"
           android:padding="3dip"/>
       <Spinner
           android:id="@+id/apertureSpinner"
@@ -22,7 +22,7 @@
     <TableRow>
       <TextView
           android:layout_column="1"
-          android:text="ISO"
+          android:text="ISO:"
           android:padding="3dip"/>
       <Spinner
           android:id="@+id/isoSpinner"
@@ -34,7 +34,7 @@
     <TableRow>
       <TextView
           android:layout_column="1"
-          android:text="Exposure Setting"
+          android:text="Exposure Setting:"
           android:padding="3dip"/>
     </TableRow>
     <TableRow>
@@ -60,7 +60,7 @@
     <TableRow>
       <TextView
           android:layout_column="1"
-          android:text="Shutter Speed"
+          android:text="Shutter Speed:"
           android:padding="3dip"/>
       <TextView
           android:id="@+id/shutterSpeed"
@@ -69,16 +69,40 @@
     </TableRow>
     <TableRow>
       <Button
-          android:id="@+id/pause_button" 
+          android:id="@+id/pause_button"
           android:text="@string/pause"
           android:layout_column="2"
           android:gravity="right">
       </Button>
     </TableRow>
+    <TableRow>
+      <TextView
+          android:id="@+id/status_text_view"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:padding="3dip"
+          android:layout_span="2"
+          android:layout_column="1"/>
+    </TableRow>
+
+    <TableRow>
+      <TextView
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:padding="3dip"
+          android:text="@string/version"
+          android:layout_span="2"
+          android:layout_column="1"/>
+    </TableRow>
+
+    <TableRow>
+      <TextView
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:padding="3dip"
+          android:text="@string/copyright"
+          android:layout_span="2"
+          android:layout_column="1"/>
+    </TableRow>
   </TableLayout>
-  <TextView
-      android:id="@+id/status_text_view"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:padding="3dip"/>
 </LinearLayout>
