--- a/LightMeter/res/values/arrays.xml
+++ b/LightMeter/res/values/arrays.xml
@@ -36,21 +36,21 @@
 
   <string-array name="exposureValues">
     <item>AUTO</item>
-    <item>1 Distant view of lighted skyline.</item>
-    <item>2 Lightning (with time exposure).</item>
-    <item>3 Fireworks (with time exposure).</item>
-    <item>4 Subjects under bright street lamps.</item>
-    <item>5 Night home interiors, average light.</item>
-    <item>6 Brightly lit home interiors at night. </item>
-    <item>7 Bottom of rainforest canopy.</item>
-    <item>8 Las Vegas or Times Square at night.</item>
-    <item>9 Landscapes 10 minutes after sunset.</item>
-    <item>10 Landscapes immediately after sunset. </item>
-    <item>11 Sunsets. Subjects in open shade.</item>
-    <item>12 Subject in heavy overcast.</item>
-    <item>13 Subjects in cloudy-bright light.</item>
-    <item>14 Subjects in weak, hazy sun.</item>
-    <item>15 Subjects in bright or hazy sun.</item>
-    <item>16 Subjects in bright daylight on sand or snow.</item>
+    <item>EV1 Distant view of lighted skyline.</item>
+    <item>EV2 Lightning (with time exposure).</item>
+    <item>EV3 Fireworks (with time exposure).</item>
+    <item>EV4 Subjects under bright street lamps.</item>
+    <item>EV5 Night home interiors, average light.</item>
+    <item>EV6 Brightly lit home interiors at night.</item>
+    <item>EV7 Bottom of rainforest canopy.</item>
+    <item>EV8 Las Vegas or Times Square at night.</item>
+    <item>EV9 Landscapes 10 minutes after sunset.</item>
+    <item>EV10 Landscapes immediately after sunset.</item>
+    <item>EV11 Sunsets. Subjects in open shade.</item>
+    <item>EV12 Subject in heavy overcast.</item>
+    <item>EV13 Subjects in cloudy-bright light.</item>
+    <item>EV14 Subjects in weak, hazy sun.</item>
+    <item>EV15 Subjects in bright or hazy sun.</item>
+    <item>EV16 Subjects in bright daylight on sand.</item>
   </string-array>
 </resources>
