--- a/LightMeter/res/menu/option_menu.xml
+++ b/LightMeter/res/menu/option_menu.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:id="@+id/about"
         android:icon="@drawable/tag"
@@ -7,4 +6,7 @@
   <item android:id="@+id/calibrate"
         android:icon="@drawable/calibrate"
         android:title="@string/calibrate"/>
+  <item android:id="@+id/help"
+        android:icon="@drawable/help"
+        android:title="@string/help_menu_title"/>
 </menu>
