--- a/LightMeter/res/values/styles.xml
+++ b/LightMeter/res/values/styles.xml
@@ -22,4 +22,7 @@
     <item name="android:textSize">12sp</item>
     <item name="android:textColor">#333</item>
   </style>
+  <style name="SmallerLightTextAppearance" parent="android:style/TextAppearance">
+    <item name="android:textSize">12sp</item>
+  </style>
 </resources>
