--- a/LightMeter/res/layout/help_dialog.xml
+++ b/LightMeter/res/layout/help_dialog.xml
@@ -12,8 +12,7 @@
               android:text="@string/help_introduction"
               android:maxLines="3"
               android:padding="3dip"
-              android:textAppearance="@style/SmallerLightTextAppearance"
-        />
+              android:textAppearance="@style/SmallerLightTextAppearance"/>
     <TextView android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:text="@string/help_disclaimer"
@@ -29,6 +28,7 @@
               android:text="@string/help_usage_manual"
               android:textAppearance="@style/SmallerLightTextAppearance"
               android:padding="3dip"/>
+
     <TextView android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:text="@string/help_usage_calibration"
