--- a/LightMeter/res/layout/main.xml
+++ b/LightMeter/res/layout/main.xml
@@ -3,11 +3,28 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent">
-  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-               android:layout_width="fill_parent"
+  <TableLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">
     <TableRow>
+      <RadioGroup
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal"
+          android:layout_column="1"
+          android:layout_span="2">
+        <RadioButton android:id="@+id/radio_Av"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="Av"
+                     android:checked="true"/>
+        <RadioButton android:id="@+id/radio_Manual"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="M"/>
+      </RadioGroup>
+    </TableRow>
+    <TableRow android:id="@+id/apertureSpinnerRow">
       <TextView
           android:layout_column="1"
           android:text="Aperture:"
@@ -19,7 +36,7 @@
           android:drawSelectorOnTop="true"
           android:prompt="@string/aperture_spinner_prompt"/>
     </TableRow>
-    <TableRow>
+    <TableRow android:id="@+id/shutterSpeedSpinnerRow">
       <TextView
           android:layout_column="1"
           android:text="Shutter Speed:"
@@ -43,21 +60,22 @@
           android:drawSelectorOnTop="true"
           android:prompt="@string/iso_spinner_prompt"/>
     </TableRow>
-    <TableRow>
+    <TableRow android:id="@+id/exposureSpinnerTitleRow">
       <TextView
           android:layout_column="1"
           android:text="Exposure Setting:"
           android:padding="3dip"/>
     </TableRow>
-    <TableRow>
+    <TableRow android:id="@+id/exposureSpinnerRow">
       <Spinner
           android:id="@+id/exposureSpinner"
           android:layout_column="1"
+          android:layout_span="2"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:drawSelectorOnTop="true"
           android:prompt="@string/exposure_spinner_prompt"
-          android:layout_span="2"/>
+          />
     </TableRow>
     <TableRow android:id="@+id/exposureDisplayRow">
       <TextView
@@ -69,7 +87,7 @@
           android:gravity="right"
           android:padding="3dip"/>
     </TableRow>
-    <TableRow>
+    <TableRow android:id="@+id/shutterSpeedResultRow">
       <TextView
           android:layout_column="1"
           android:text="Shutter Speed:"
