--- a/LightMeter/res/layout/main.xml
+++ b/LightMeter/res/layout/main.xml
@@ -22,6 +22,10 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="M"/>
+        <RadioButton android:id="@+id/radio_Sv"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="Sv"/>
       </RadioGroup>
     </TableRow>
     <TableRow android:id="@+id/apertureSpinnerRow">
