using radio button for switching between auto and manual exposure settings

--- a/LightMeter/res/layout/main.xml
+++ b/LightMeter/res/layout/main.xml
@@ -7,12 +7,15 @@
                android:layout_height="wrap_content"
                android:stretchColumns="1">
     <TableRow>
+        <TextView
+          android:layout_column="1"
+          android:text="Mode:"
+          android:padding="3dip"/>
       <RadioGroup
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
-          android:layout_column="1"
-          android:layout_span="2">
+          android:layout_column="2">
         <RadioButton android:id="@+id/radio_Av"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
@@ -69,8 +72,24 @@
           android:layout_column="1"
           android:text="Exposure Value:"
           android:padding="3dip"/>
+       <RadioGroup
+          android:id="@+id/exposureSettingRadioGroup"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal"
+          android:layout_column="2">
+        <RadioButton android:id="@+id/radioAutoExposure"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="Auto EV"
+                     android:checked="true"/>
+        <RadioButton android:id="@+id/radioManualExposure"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="Manual EV"/>
+      </RadioGroup>
     </TableRow>
-    <TableRow android:id="@+id/exposureSpinnerRow">
+    <TableRow>
       <Spinner
           android:id="@+id/exposureSpinner"
           android:layout_column="1"
@@ -78,19 +97,26 @@
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:drawSelectorOnTop="true"
-          android:prompt="@string/exposure_spinner_prompt"
-          />
+          android:prompt="@string/exposure_spinner_prompt"/>
     </TableRow>
-    <TableRow android:id="@+id/exposureDisplayRow">
+    <TableRow>
       <TextView
           android:id="@+id/exposureValue"
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"
-           android:layout_span="2"
-            android:layout_column="1"
+          android:layout_span="2"
+          android:layout_column="1"
           android:gravity="right"
-          android:padding="3dip"
-          />
+          android:padding="3dip" />
+    </TableRow>
+    <TableRow>
+      <Button
+          android:id="@+id/pause_button"
+          android:text="@string/pause"
+          android:layout_column="2"
+          android:layout_width="wrap_content"
+          android:gravity="right">
+      </Button>
     </TableRow>
     <TableRow android:id="@+id/apertureDisplayRow">
       <TextView
@@ -112,14 +138,7 @@
           android:gravity="right"
           android:padding="3dip"/>
     </TableRow>
-    <TableRow>
-      <Button
-          android:id="@+id/pause_button"
-          android:text="@string/pause"
-          android:layout_column="2"
-          android:gravity="right">
-      </Button>
-    </TableRow>
+
     <TableRow>
       <TextView
           android:id="@+id/status_text_view"
