--- a/LightMeter/res/layout/main.xml
+++ b/LightMeter/res/layout/main.xml
@@ -30,32 +30,7 @@
                      android:text="Sv"/>
       </RadioGroup>
 
-      <!--<Spinner-->
-      <!--android:id="@+id/evSettingSpinner"-->
-      <!--android:layout_width="fill_parent"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:drawSelectorOnTop="true"-->
-      <!--android:layout_column="2"-->
-      <!--android:gravity="left"-->
-      <!--android:prompt="@string/iso_spinner_prompt"/>-->
-      <RadioGroup
-          android:id="@+id/exposureSettingRadioGroup"
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:orientation="horizontal"
-          android:layout_column="2">
-        <RadioButton android:id="@+id/radioAutoExposure"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="Auto EV"
-                     android:textAppearance="@style/SmallerLightTextAppearance"
-                     android:checked="true"/>
-        <RadioButton android:id="@+id/radioManualExposure"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="Manual EV"
-                     android:textAppearance="@style/SmallerLightTextAppearance"/>
-      </RadioGroup>
+
     </TableRow>
   </TableLayout>
   <TableLayout android:layout_width="fill_parent"
@@ -96,10 +71,11 @@
 
     </TableRow>
     <TableRow>
+
       <TextView
           android:layout_column="1"
           android:layout_width="wrap_content"
-          android:text="Shutter Speed:"
+          android:text="Shutter Spd:"
           android:padding="3dip"/>
       <Spinner
           android:id="@+id/shutterSpeedSpinner"
@@ -107,21 +83,39 @@
           android:layout_height="wrap_content"
           android:drawSelectorOnTop="true"
           android:gravity="left"
+          android:layout_column="2"
+
           android:prompt="@string/shutter_speed_spinner_prompt"
           android:visibility="gone"/>
       <TextView
           android:id="@+id/shutterSpeed"
+          android:layout_column="2"
+
           android:gravity="right"
           android:padding="3dip"/>
+
+
     </TableRow>
   </TableLayout>
-  <TextView
+  <RadioGroup
+      android:id="@+id/exposureSettingRadioGroup"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
-      android:padding="3dip"
-      android:textStyle="italic"
-      android:textAppearance="@style/SmallerLightTextAppearance"
-      android:text="Exposure Value:"/>
+      android:orientation="horizontal"
+      android:layout_column="3"
+      android:layout_span="2">
+    <RadioButton android:id="@+id/radioAutoExposure"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="Auto EV"
+                 android:textAppearance="@style/SmallerLightTextAppearance"
+                 android:checked="true"/>
+    <RadioButton android:id="@+id/radioManualExposure"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="Man EV"
+                 android:textAppearance="@style/SmallerLightTextAppearance"/>
+  </RadioGroup>
   <Spinner
       android:id="@+id/exposureSpinner"
       android:layout_width="fill_parent"
@@ -167,6 +161,18 @@
                android:layout_height="wrap_content"
                android:stretchColumns="1">
     <TableRow>
+
+      <TextView
+          android:layout_column="1"
+          android:text="Subject distance:"
+          android:padding="3dip"/>
+      <EditText
+          android:id="@+id/editTextSubjectDistance"
+          android:padding="3dip"
+          android:numeric="decimal"
+          android:layout_column="2"/>
+    </TableRow>
+    <TableRow>
       <TextView
           android:layout_column="1"
           android:text="Focal Length:"
@@ -178,18 +184,6 @@
           android:drawSelectorOnTop="true"
           android:prompt="@string/focal_length_spinner_prompt"
           android:layout_column="2"/>
-    </TableRow>
-    <TableRow>
-
-      <TextView
-          android:layout_column="1"
-          android:text="Subject distance:"
-          android:padding="3dip"/>
-      <EditText
-          android:id="@+id/editTextSubjectDistance"
-          android:padding="3dip"
-          android:layout_column="2"
-          />
     </TableRow>
     <TableRow>
       <TextView
